feat: Use compact object headers
It does reduce memory usage.